--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ input[type="text"] {
   <p id="audioDescription">🔴 PRESS the record button, then 🗣️ SPEAK to answer the question:</p>
   <p id="audioPrompt">What dreams do you have for the future?</p>
   <div>
-    <button id="recordBtn">Record</button>
+    <button id="recordBtn">🔴 Record</button>
     <button id="pauseBtn" disabled>Pause</button>
     <button id="stopBtn" disabled>Stop</button>
     <button id="nextBtn" disabled>Next</button>
